refactor: Deployment URL in Swagger.json file
